# SDL_sound

./: .travis.yml  Makefile.am  Makefile.in  README.md  SDL2_sound.pc.in  SDL_sound.c  SDL_sound.pc.in  acinclude.m4  aclocal.m4  config.guess  config.h.in  config.sub  configure  configure.ac  depcomp  install-sh  ltmain.sh  missing
decoders/: Makefile.am  Makefile.in  mpg123.c  oggtremor.c  wav.c
decoders/mpglib/: Makefile.am  Makefile.in  dct64_i386.c  dct64_neon.S  decode_i386.c  mpg123_sdlsound.h  synth_neon.S  tabinit.c
decoders/timidity/: Makefile.in  timidity.c
playsound/: Makefile.in  physfsrwops.c  playsound.c
