noinst_LTLIBRARIES = libdecoders.la

SUBDIRS = timidity mpglib

INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/decoders/timidity

libdecoders_la_SOURCES =	\
	aiff.c		\
	au.c		\
	mikmod.c	\
	mpg123.c	\
	modplug.c	\
	mpglib.c	\
	smpeg.c		\
	oggtremor.c	\
	raw.c		\
	shn.c		\
	voc.c		\
	midi.c		\
	flac.c		\
	speex.c		\
	quicktime.c \
	wav.c
